--- a/index.html
+++ b/index.html
@@ -24,3 +24,94 @@
     <h4> Los verdaderos mosqueteros son Athos, Porthos y Aramis, amigos inseparables que viven bajo el lema «Uno para todos, todos para uno». D'Artagnan primero se enfrenta separadamente a cada uno de ellos, pero terminan siendo sus amigos.</h4>
     
     Juntos sirven al rey<b> Luis XIII </b> y se enfrentan a su primer ministro, el cardenal Richelieu, y a sus agentes Milady de Winter y el conde de Rochefort, para así resguardar el honor de la reina Ana de Austria.</p>
+<h2>En este espacio listamos desordenado</h2>
+<p>Países del mundo</p> 
+<ul> 
+   	<li>Argentina</li> 
+   	<li>Perú</li> 
+   	<li>Chile</li> 
+</ul>
+<h2>En este espacio listamos ordenado--> ( numera en orden)</h2>
+<ol>
+    <li>Elemento 1</li>
+    <li>Elemento 2</li>
+    <li>Elemento 3</li>
+    <li>Elemento 4</li>
+  </ol>
+<h2>En este espacio listamos con types distintos de item</h2>
+<ul type="square"> 
+    <li>Elemento 1 
+    <li>Elemento 2 
+    <li>Elemento 3 
+    <li type="circle">Elemento 4 
+    </ul>
+<h2>En este espacio lhacemos una tabla</h2>
+    <table>
+        <tr>
+          <td>Fila 1 Columna 1</td>
+          <td>Fila 1 Columna 2</td>
+          <td>Fila 1 Columna 3</td>
+          <td>Fila 1 Columna 4</td>
+        </tr>
+        <tr>
+          <td>Fila 2 Columna 1</td>
+          <td>Fila 2 Columna 2</td>
+          <td>Fila 2 Columna 3</td>
+          <td>Fila 2 Columna 4</td>
+        </tr>
+        <tr>
+          <td>Fila 3 Columna 1</td>
+          <td>Fila 3 Columna 2</td>
+          <td>Fila 3 Columna 3</td>
+          <td>Fila 3 Columna 4</td>
+        </tr>
+      </table>
+<h2>Tabla con cabecera</h2>
+<table class="default">
+
+    <tr>
+  
+      <th>Hoy</th>
+  
+      <th>Mañana</th>
+  
+      <th>Jueves</th>
+  
+    </tr>
+  
+    <tr>
+  
+      <td>Soleado</td>
+  
+      <td>Mayormente soleado</td>
+  
+      <td>Parcialmente nublado</td>
+  
+    </tr>
+  
+    <tr>
+  
+      <td>19°C</td>
+  
+      <td>17°C</td>
+  
+      <td>12°C</td>
+  
+    </tr>
+  
+    <tr>
+  
+      <td>E 13 km/h</td>
+  
+      <td>E 11 km/h</td>
+  
+      <td>S 16 km/h</td>
+  
+    </tr>
+  
+  </table>
+
+  <h3>A todo le falta css</h3>
+  <p><a class="btn btn-lg btn-light " href="https://htmlcheatsheet.com/" role="button"> Hacer Ejercicios 6,7,8</a></p>
+</body>
+</html>
