--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <meta charset="utf-8">
- <!--Falta la Meta DATA de las redes sociales-->
- <!-- Primary Meta Tags -->
+<!--Falta la Meta DATA de las redes sociales-->
+<!-- Primary Meta Tags -->
 <!-- Primary Meta Tags -->
 <title>Mosqueteros UB</title>
 <meta name="title" content="Mosqueteros UB">
@@ -27,9 +27,9 @@
 <h2>En este espacio listamos desordenado</h2>
 <p>Países del mundo</p> 
 <ul> 
-   	<li>Argentina</li> 
-   	<li>Perú</li> 
-   	<li>Chile</li> 
+  <li>Argentina</li> 
+  <li>Perú</li> 
+  <li>Chile</li> 
 </ul>
 <h2>En este espacio listamos ordenado--> ( numera en orden)</h2>
 <ol>
@@ -45,7 +45,7 @@
     <li>Elemento 3 
     <li type="circle">Elemento 4 
     </ul>
-<h2>En este espacio lhacemos una tabla</h2>
+<h2>En este espacio hacemos una tabla</h2>
     <table>
         <tr>
           <td>Fila 1 Columna 1</td>
