--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
     </tr>
   
   </table>
+  <a href="img\Logogadla.png" target="_blank">Con target blank la imagen abre en otra pestaña </a>
+
 
   <h3>A todo le falta css</h3>
   <p><a class="btn btn-lg btn-light " href="https://htmlcheatsheet.com/" role="button"> Hacer Ejercicios 6,7,8</a></p>
